sumo/tests/sumo/errors/testsuite.sumo
# Ordered list of tests in test suite. Add as appropriate


# Tests what happens if an unknown option is passed
unknown_option

# Tests what happens if mean data constrains are incomplete (first begin is missing)
meandata_edges_missing_begin1

# Tests what happens if mean data constrains are incomplete (second  begin is missing)
meandata_edges_missing_begin2

# Tests what happens if mean data constrains are incomplete (second begin is missing, divider is there)
meandata_edges_missing_begin_divider

# Tests what happens if mean data constrains are incomplete (first end is missing)
meandata_edges_missing_end1

# Tests what happens if mean data constrains are incomplete (second  end is missing)
meandata_edges_missing_end2

# Tests what happens if mean data constrains are incomplete (second end is missing, divider is there)
meandata_edges_missing_end_divider

# Tests what happens if the order is false (begin>=end)
meandata_edges_false_order




